welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(100)
 required: Boolean
  if (90 <= n <= 100) {
                 ^nearHundred:5: error: type mismatch;
 found   : Int(200)
 required: Boolean
    if (190 <= n <= 200) {
                    ^